--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@
   min-width: 1140px;
 }
 
+.full-container.--no-scroll {
+  height: 100vh;
+  overflow: hidden;
+}
+
 .modal-container {
   display: flex;
   justify-content: center;
@@ -60,17 +65,22 @@
   width: 50%;
 }
 
+.modal-content__img-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .modal-content__img-wrap > img {
   width: 100%;
-  max-height: 100%;
+  height: 100%;
   object-fit: cover;
-  object-position: top;
+  object-position: top center;
 }
 
 .modal-content__txt-wrap {
-  padding: 30px 24px 30px 42px;
+  padding: 50px 50px 30px 50px;
   overflow-y: auto;
-  color: #333;
 }
 
 .modal-content__close-btn {
@@ -124,25 +134,29 @@
 
 .modal-content__info-item {
   padding: 0.4rem 0;
+  color: #222;
 }
 
 .modal-content__desc {
   margin-top: 1.6rem;
-  line-height: 1.5;
-  color: var(--font-gray);
+  line-height: 1.8;
+  font-size: 1.4rem;
+  color: #555;
+  word-break: break-all;
 }
 
 .modal-content__links {
   display: flex;
   gap: 0.8rem;
-  margin-top: 2rem;
+  margin-top: 1.6rem;
 }
 
 .modal-content__links > a {
-  padding: 5px 18px;
+  display: block;
+  padding: 5px 20px;
   background-color: #999;
   color: #fff;
-  border-radius: 30px;
+  border-radius: 5px;
   font-weight: 500;
   font-size: 1.4rem;
 }
@@ -162,7 +176,7 @@
 }
 
 .page-tit-container {
-  margin: 5rem 0;
+  padding: 5rem 0;
   color: #363d47;
 }
 
@@ -286,11 +300,11 @@
 }
 
 .project-card__badge.Team {
-  background-color: #d7e4f8;
-  color: #0061f2;
+  background-color: #333;
+  color: #fff;
 }
 
 .project-card__badge.Single {
-  background-color: #d9eeec;
-  color: #00ac69;
+  background-color: #ddd;
+  color: #000;
 }
