--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@
   margin: 0 auto;
 }
 
+.spacer {
+  display: block;
+  padding-top: 1rem;
+}
+
 /* 스타일 */
 
 .full-container {
@@ -65,20 +70,19 @@
 }
 
 .modal-content__img-wrap {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  border-right: 1px solid #ddd;
+  overflow: auto;
 }
 
 .modal-content__img-wrap > img {
   width: 100%;
-  height: 100%;
+  border-bottom: 1px solid #eee;
   object-fit: cover;
-  object-position: top center;
+  object-position: top left;
 }
 
 .modal-content__txt-wrap {
-  padding: 50px 50px 30px 50px;
+  padding: 50px;
   overflow-y: auto;
 }
 
@@ -139,23 +143,23 @@
 .modal-content__desc {
   margin-top: 1.6rem;
   line-height: 1.8;
-  font-size: 1.4rem;
-  color: #555;
+  font-size: 1.5rem;
+  color: #777;
   word-break: break-all;
 }
 
 .modal-content__links {
   display: flex;
   gap: 0.8rem;
-  margin-top: 1.6rem;
+  margin-top: 3rem;
 }
 
 .modal-content__links > a {
   display: block;
   padding: 5px 20px;
-  background-color: #999;
-  color: #fff;
+  background-color: #555;
   border-radius: 5px;
+  color: #fff;
   font-weight: 500;
   font-size: 1.4rem;
 }
