반응형 제작

--- a/reset.css
+++ b/reset.css
@@ -4,7 +4,7 @@
   --filter-box-radius: 5.6px;
   --card-radius: 8px;
   --point-red: #dc392d;
-  --hovered-red: #bb3026;
+  --hovered-red: #ab2a2a;
   --font-gray: #69707a;
   --filter-box-shadow: 0 0.15rem 1.75rem #21283226;
   --hovered-card-shadow: 0 0.5rem 2rem #21283240;
